--- a/spam.ipynb
+++ b/spam.ipynb
@@ -79,7 +79,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4TFgfM3shebM",
-        "outputId": "cda80f01-d329-4a64-80d5-acea1b891d79"
+        "outputId": "e7398548-c2e2-481e-f86e-4d95e5c3f783"
       },
       "source": [
         "dados.shape"
@@ -108,7 +108,7 @@
           "height": 355
         },
         "id": "hNw7teP2jS_i",
-        "outputId": "2c397c4f-5ff0-42e5-bfd6-1d305ae1bec1"
+        "outputId": "2c596de4-cd9f-4f84-c89b-4eb292d44c17"
       },
       "source": [
         "dados.head()"
@@ -682,7 +682,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G3zafwjUhwk5",
-        "outputId": "de611d2a-208c-4afc-a1cf-523d4de6776a"
+        "outputId": "deba242b-a650-433b-b16a-cf8c685dd634"
       },
       "source": [
         "vetor_nulos.loc[vetor_nulos.values > 0]"
@@ -710,7 +710,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zRNmBW7NgI-Q",
-        "outputId": "b54b30f9-aa29-41ad-eb2c-53416103dd03"
+        "outputId": "172bdb1e-67e0-400d-a4f4-2b7bf2c6670f"
       },
       "source": [
         "dados.info()"
@@ -738,7 +738,7 @@
           "height": 350
         },
         "id": "Mfy2bh1ritZg",
-        "outputId": "09f022de-761a-4f17-9b65-564f32a029b8"
+        "outputId": "9fcd293e-fcee-415a-c677-71c7581fcabf"
       },
       "source": [
         "sns.countplot(dados['Prediction'])"
@@ -757,7 +757,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fe752fc8a10>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7fa07262e990>"
             ]
           },
           "metadata": {
@@ -808,7 +808,7 @@
           "height": 253
         },
         "id": "M6ifSSjvl7r8",
-        "outputId": "0ba19081-70ea-4bb2-cd20-1e18a59dcfa6"
+        "outputId": "1c72e5c0-0bbf-4a5c-b535-ab23881704f3"
       },
       "source": [
         "dados.head()"
@@ -1392,7 +1392,7 @@
           "height": 439
         },
         "id": "M4NUGZDCuyLY",
-        "outputId": "f6b22333-d4b3-4bc2-b7d2-b0039ede99a6"
+        "outputId": "98baddec-ad99-4ebd-8b59-55fe5720fd2c"
       },
       "source": [
         "dados"
@@ -2465,7 +2465,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "41zhbT6rwvSS",
-        "outputId": "62dc0ff0-6135-4529-db93-7d00fc4cb5c3"
+        "outputId": "62a3dd9d-4c9d-4e33-9eb8-9c4707de157d"
       },
       "source": [
         "total_agrupado = dados['Total'].groupby(dados['Prediction']).mean()\n",
@@ -2499,7 +2499,7 @@
           "height": 296
         },
         "id": "q5yE3cLwBtVH",
-        "outputId": "c618c172-65e5-4f40-d8ff-0b336918a081"
+        "outputId": "bc251779-c283-435f-cd75-bce66f5eefe7"
       },
       "source": [
         "sns.barplot(x= total_agrupado.index, y= total_agrupado.values)\n",
@@ -2584,7 +2584,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X4FF0-PeB6Vm",
-        "outputId": "19f64a9b-9cbc-439c-a23c-4b2f96e8f4e9"
+        "outputId": "8fe02d38-d3cb-4401-d2c5-e8f567b61737"
       },
       "source": [
         "num_letras"
@@ -2634,7 +2634,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LAsO88mY_l9M",
-        "outputId": "929b0fd1-f99d-4c51-cfc0-ddfe3b9219a8"
+        "outputId": "b01d0d68-dc2c-456c-ff52-64c573be0170"
       },
       "source": [
         "dados.iloc[:, palavras_maior.index].sum(axis= 1).values"
@@ -2684,7 +2684,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Y-ftLfl_Edou",
-        "outputId": "e1e767ba-ccd5-4d27-eb91-ace787b27490"
+        "outputId": "772bddd6-cb63-46ee-e28a-6780b7afcd92"
       },
       "source": [
         "num_palavras_agrupado.mean()"
@@ -2716,7 +2716,7 @@
           "height": 473
         },
         "id": "4SK_bmoTDZqk",
-        "outputId": "e32103a5-d963-4a0d-f509-40158e394fd9"
+        "outputId": "eaa48bb7-0207-42d5-ac6f-62e239c75ccc"
       },
       "source": [
         "dados"
@@ -3797,7 +3797,7 @@
         "id": "aGUtcjwOkJS_"
       },
       "source": [
-        "X = dados.iloc[:, 0:3002].values\n",
+        "X = dados.iloc[:, 0:3000].values\n",
         "y = dados.iloc[:, 3002].values"
       ],
       "execution_count": 25,
@@ -3809,7 +3809,7 @@
         "id": "bDe2Oo7wlZUJ"
       },
       "source": [
-        "X_treinamento, X_test, y_treinamento, y_test = train_test_split(X, y, test_size = 0.5, stratify= y)"
+        "X_treinamento, X_test, y_treinamento, y_test = train_test_split(X, y, test_size = 0.25, stratify= y)"
       ],
       "execution_count": 26,
       "outputs": []
@@ -3821,7 +3821,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "P4DnH_FgmPao",
-        "outputId": "599abb5b-4460-45e1-b33c-e561491bc35f"
+        "outputId": "8fe03e45-deae-446e-91a2-8b0bae18d37d"
       },
       "source": [
         "rfc = RandomForestClassifier()\n",
@@ -3869,10 +3869,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zth5qwygm-1c",
-        "outputId": "54725741-6ca3-445f-fc57-be6dd25d8b25"
+        "outputId": "363518eb-6374-4336-9ba6-2007314e369b"
       },
       "source": [
-        "accuracy_score(previsao, y_test)"
+        "ac =  accuracy_score(previsao, y_test)\n",
+        "\n",
+        "ac"
       ],
       "execution_count": 29,
       "outputs": [
@@ -3880,7 +3882,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9663573085846868"
+              "0.9760247486465584"
             ]
           },
           "metadata": {
@@ -3908,7 +3910,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bdxMJAZWnUbE",
-        "outputId": "db85efb8-f284-48be-c836-7de179fa8387"
+        "outputId": "d661bd4e-7477-4559-a0b9-eff273dec2b5"
       },
       "source": [
         "cm[0][0] / (cm[0][0] + cm[0][1])"
@@ -3919,7 +3921,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9760479041916168"
+              "0.9825897714907508"
             ]
           },
           "metadata": {
@@ -3936,7 +3938,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UyWQqh9mn-xa",
-        "outputId": "108da2dd-4910-4434-e152-33837eba4fda"
+        "outputId": "7fcb17ea-40b1-454c-d58b-8868bdf4f9ab"
       },
       "source": [
         "cm[1][1] / (cm[1][1] + cm[1][0])"
@@ -3947,13 +3949,256 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9425901201602136"
+              "0.9598930481283422"
             ]
           },
           "metadata": {
             "tags": []
           },
           "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EIMH8nPSbEoH"
+      },
+      "source": [
+        "## Tentativas de melhorar o modelo"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "F20qw_nbb7ci"
+      },
+      "source": [
+        "### Com a coluna de Total de Palavras no email"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bpys_RhcbNKQ"
+      },
+      "source": [
+        "X = dados.iloc[:, 0:3001].values\n",
+        "y = dados.iloc[:, 3002].values\n",
+        "\n",
+        "X_treinamento, X_test, y_treinamento, y_test = train_test_split(X, y, test_size = 0.25, stratify= y)\n",
+        "\n",
+        "rfc = RandomForestClassifier()\n",
+        "\n",
+        "rfc.fit(X_treinamento, y_treinamento)\n",
+        "\n",
+        "previsao = rfc.predict(X_test)\n",
+        "\n",
+        "cm_2 = confusion_matrix(previsao, y_test)\n",
+        "\n",
+        "ac_2 = accuracy_score(previsao, y_test)"
+      ],
+      "execution_count": 33,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WxY9q1xUc4r-",
+        "outputId": "15c078d0-1626-4112-f15b-ed52d4f49cf1"
+      },
+      "source": [
+        "ac_2"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9698375870069605"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eDt0JOyObZdB",
+        "outputId": "cfaad6a3-b6b0-48c1-f722-26d8b9d60a85"
+      },
+      "source": [
+        "cm_2[0][0] / (cm_2[0][0] + cm_2[0][1])"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9761646803900325"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "90_tpVlFbb2Z",
+        "outputId": "152e30a8-718b-457e-c75e-cd7ca73c0a6e"
+      },
+      "source": [
+        "cm_2[1][1] / (cm_2[1][1] + cm_2[1][0])"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9540540540540541"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6JneAjQpcEBU"
+      },
+      "source": [
+        "### Com a coluna de Total de Palavras no email e coluna com o total de palavras com mais de 3 letras"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0dbTLxMUcOck"
+      },
+      "source": [
+        "X = dados.iloc[:, 0:3002].values\n",
+        "y = dados.iloc[:, 3002].values\n",
+        "\n",
+        "X_treinamento, X_test, y_treinamento, y_test = train_test_split(X, y, test_size = 0.25, stratify= y)\n",
+        "\n",
+        "rfc = RandomForestClassifier()\n",
+        "\n",
+        "rfc.fit(X_treinamento, y_treinamento)\n",
+        "\n",
+        "previsao = rfc.predict(X_test)\n",
+        "\n",
+        "cm_3 = confusion_matrix(previsao, y_test)\n",
+        "\n",
+        "ac_3 = accuracy_score(previsao, y_test)"
+      ],
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "R6VlQTtac0_0",
+        "outputId": "d084bb0a-b05f-49ec-d303-dbd49b302b7d"
+      },
+      "source": [
+        "ac_3"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9675174013921114"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BoWR7Oh4cSJM",
+        "outputId": "0e5b73b8-5e71-43d1-857e-4f3800aff005"
+      },
+      "source": [
+        "cm_3[0][0] / (cm_3[0][0] + cm_3[0][1])"
+      ],
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9834437086092715"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 39
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n0offYh8cUP0",
+        "outputId": "594e378c-ac86-48b6-bf86-3c4e1f12d363"
+      },
+      "source": [
+        "cm_3[1][1] / (cm_3[1][1] + cm_3[1][0])"
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9302325581395349"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
         }
       ]
     },
@@ -3973,12 +4218,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RpimLz0zozfS",
-        "outputId": "737de0ee-41e0-42ac-afc2-0765132443b8"
+        "outputId": "7f028e5a-4aa6-4e2b-af07-9d507ac37c66"
       },
       "source": [
         "from imblearn.over_sampling import SMOTE"
       ],
-      "execution_count": 33,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -4000,7 +4245,7 @@
       "source": [
         "smote = SMOTE(ratio= 'minority')"
       ],
-      "execution_count": 34,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -4010,12 +4255,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GGuOWd8ipDpi",
-        "outputId": "99229c83-8ca1-4a92-831b-7ecd9d4ae9fb"
+        "outputId": "df769875-4d58-4bba-c8c2-96fcf833278f"
       },
       "source": [
         "X_over, y_over = smote.fit_sample(X, y)"
       ],
-      "execution_count": 35,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
@@ -4035,7 +4280,7 @@
       "source": [
         "X_treinamento_over, X_test_over, y_treinamento_over, y_test_over = train_test_split(X_over, y_over, test_size= 0.9, stratify= y_over)"
       ],
-      "execution_count": 36,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -4045,14 +4290,14 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u0HiXLc-p0FJ",
-        "outputId": "a2cbb5b5-830e-4a38-8825-f875d106eebe"
+        "outputId": "962f3dcc-e395-45b3-d708-767d57c58e99"
       },
       "source": [
         "rfc_over = RandomForestClassifier()\n",
         "\n",
         "rfc_over.fit(X_treinamento_over, y_treinamento_over)"
       ],
-      "execution_count": 37,
+      "execution_count": 45,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4071,7 +4316,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 45
         }
       ]
     },
@@ -4083,7 +4328,7 @@
       "source": [
         "previsao_over = rfc_over.predict(X_test_over)"
       ],
-      "execution_count": 38,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -4093,24 +4338,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iOk6NLEwqHzM",
-        "outputId": "d464f04d-2ff2-4fa5-8b2a-79faa2a0dd29"
+        "outputId": "a11491a3-05d7-473d-9e9a-9b7974fb1110"
       },
       "source": [
         "accuracy_score(previsao_over, y_test_over)"
       ],
-      "execution_count": 39,
+      "execution_count": 47,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9431164901664145"
+              "0.9503782148260211"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 47
         }
       ]
     },
@@ -4121,27 +4366,27 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ad91def8-a461-4256-d9a0-a51eb63f4ed5"
+        "outputId": "abe5c709-d79e-4c1d-9a3e-658cf889f99d"
       },
       "source": [
         "cm_over = confusion_matrix(previsao_over, y_test_over)\n",
         "\n",
         "cm_over"
       ],
-      "execution_count": 40,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[2976,   47],\n",
-              "       [ 329, 3258]])"
+              "array([[3001,   24],\n",
+              "       [ 304, 3281]])"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 48
         }
       ]
     },
@@ -4152,24 +4397,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CqTxRWSuqWBj",
-        "outputId": "985f94a3-09ce-4aa4-ed5a-01b1a09e5e54"
+        "outputId": "71b0c220-00c6-40ff-88ec-77184ccbd9a1"
       },
       "source": [
         "cm_over[0][0] / (cm_over[0][0] + cm_over[0][1])"
       ],
-      "execution_count": 41,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9844525305987429"
+              "0.9920661157024794"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 49
         }
       ]
     },
@@ -4180,24 +4425,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oLS2t3W_qcYc",
-        "outputId": "f1828819-1cb5-4f3d-9eb7-7d55839fc050"
+        "outputId": "db290e38-8ae0-4dba-fadf-bfc24a2b9d78"
       },
       "source": [
         "cm_over[1][1] / (cm_over[1][1] + cm_over[1][0])"
       ],
-      "execution_count": 42,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.9082798996375802"
+              "0.9152022315202232"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 50
         }
       ]
     }
